--- a/index.html
+++ b/index.html
@@ -1,47 +1,89 @@
 <!DOCTYPE html>
-<html >
-	<head>
-		<meta charset="UTF-8">
-		<title>clicker</title>
-		<link rel="stylesheet" href="style.css">
-	</head>
-	<body>
-		<div class=container>
+<html>
+
+<head>
+	<meta charset="UTF-8">
+	<title>clicker</title>
+	<link rel="stylesheet" href="style.css">
+	<link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Ubuntu'>
+	<script>
+		(function(i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r;
+			i[r] = i[r] || function() {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date();
+			a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0];
+			a.async = 1;
+			a.src = g;
+			m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+		ga('create', 'UA-81223143-1', 'auto');
+		ga('send', 'pageview');
+	</script>
+</head>
+
+<body>
+	<div class=container>
 		<div class=overview>
-			<div class=collect onclick="hackClick(1)">Click</div>
 			<div class=money>
 				<div>Money:</div>
-				<div id=money>0</div>
+				<div id=money>$0</div>
 			</div>
+			<div class=collect onclick=hackClick(1)>Click</div>
+		</div>
+		<div class=connector>
+			<div class=info onclick=hackClick(-999999999999)>Do not use any of these, these are hacks! :)</div>
+			<div class=buildings>Show me!</div>
+			<div class=hack onclick=hackClick(1000)>1K</div>
+			<div class=hack onclick=hackClick(10000)>10K</div>
+			<div class=hack onclick=hackClick(100000)>100K</div>
+			<div class=hack onclick=hackClick(1000000)>1M</div>
+			<div class=hack onclick=hackClick(10000000)>10M</div>
+			<div class=hack onclick=hackClick(100000000)>100M</div>
 		</div>
 		<div class=miners>
-			<div class=beginner>
-				<div>(x1) Beginner:</div>
-				<div id=beginner>0</div>
-				<div class=buy onclick=buyBeginner()>Buy for:</div>
-				<div id=beginnerCost>15</div>
+			<div class=miner>
+				<div class=pic>IMG</div>
+				<div class=name>One</div>
+				<div class=quantity id=quantityOne>0</div>
+				<div class=cost id=costOne>$15</div>
 			</div>
-			<div class=intermediate>
-				<div>(x5) Intermediate:</div>
-				<div id=intermediate>0</div>
-				<div class=buy onclick=buyIntermediate()>Buy for:</div>
-				<div id=intermediateCost>110</div>
+			<div class=miner hidden>
+				<div class=pic>IMG</div>
+				<div class=name>Two</div>
+				<div class=quantity id=quantityTwo>0</div>
+				<div class=cost id=costTwo>$100</div>
 			</div>
-			<div class=advanced>
-				<div>(x15) Advanced:</div>
-				<div id=advanced>0</div>
-				<div class=buy onclick=buyAdvanced()>Buy for:</div>
-				<div id=advancedCost>1100</div>
+			<div class=miner hidden>
+				<div class=pic>IMG</div>
+				<div class=name>Three</div>
+				<div class=quantity id=quantityThree>0</div>
+				<div class=cost id=costThree>$1100</div>
 			</div>
-			<div class=legendary>
-				<div>(x50) Legendary:</div>
-				<div id=legendary>0</div>
-				<div class=buy onclick=buyLegendary()>Buy for:</div>
-				<div id=legendaryCost>11000</div>
+			<div class=miner hidden>
+				<div class=pic>IMG</div>
+				<div class=name>Four</div>
+				<div class=quantity id=quantityFour>0</div>
+				<div class=cost id=costFour>$12000</div>
+			</div>
+			<div class=miner hidden>
+				<div class=pic>IMG</div>
+				<div class=name>Five</div>
+				<div class=quantity id=quantityFive>0</div>
+				<div class=cost id=costFive>$130000</div>
+			</div>
+			<div class=miner hidden>
+				<div class=pic>IMG</div>
+				<div class=name>Six</div>
+				<div class=quantity id=quantitySix>0</div>
+				<div class=cost id=costSix>$1400000</div>
 			</div>
 		</div>
 	</div>
-		<script src="jquery-3.1.0.min.js"></script>
-		<script src="index.js"></script>
-	</body>
+	<script src="jquery-3.1.0.min.js"></script>
+	<script src="index.js"></script>
+</body>
+
 </html>
