--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 		</div>
 	</div>
 	<script src='jquery-3.1.0.min.js'></script>
+	<script src="jquery.cookie.js"></script>
 	<script src='index.js'></script>
 </body>
 
