--- a/index.html
+++ b/index.html
@@ -30,10 +30,16 @@
 		<div class='overview'>
 			<div class='money'>
 				<div>Money:</div>
-				<div id='money'>$0.0</div>
+				<div id='money'>$0</div>
+				<div class='sec'>$0/s</div>
 			</div>
 			<div class='collect' onclick='hackClick(1)'>Click</div>
-			<div class='sec'>$0.0/s</div>
+			<div class='options'>Options</div>
+			<div class='optionspanel' hidden>
+				<div class='save'>Save</div>
+				<div class='load'>Load</div>
+				<div class='reset'>Reset</div>
+			</div>
 		</div>
 		<div class='miners'>
 			<div class='miner'>
