--- a/index.html
+++ b/index.html
@@ -31,58 +31,64 @@
 				<div id='money'>$0</div>
 				<div class='sec'>$0/s</div>
 			</div>
-			<div class='collect' onclick='hackClick(1)'>Click</div>
+			<div class='collect'>Click</div>
 			<div class='options'>Options</div>
 			<div class='optionspanel' hidden>
 				<div class='reset'>Reset</div>
 				<div class='load'>Load</div>
 				<div class='save'>Save</div>
 			</div>
-			<div class='admin hidden'>Admin</div>
+			<div class='admin'>Admin</div>
 			<div class='adminpanel' hidden>
 				<div class='buildings'>Miners</div>
-				<div class='hack' onclick='hackClick(10000000)'>10M</div>
+				<div class='hack'>10M</div>
 			</div>
 		</div>
 		<div class='upgrades'>
-			<div class='upgrade'>not</div>
-			<div class='upgrade'>yet</div>
-			<div class='upgrade'>ready</div>
+			<div class='upgrade' id='upOne'>100</div>
+			<div class='upgrade' id='upTwo'>500</div>
+			<div class='upgrade' id='upThree'>10000</div>
 		</div>
 		<div class='miners'>
 			<div class='hidemine'>
 				<div class='miner'>
-					<div class='pic'><i class="fa fa-university" aria-hidden="true"></i></div>
+					<div class='pic'><i class="fa fa-university" aria-hidden="true"></i>
+					</div>
 					<div class='name'>One</div>
 					<div class='quantity' id='quantityOne'>0</div>
 					<div class='cost' id='costOne'>$15</div>
 				</div>
 				<div class='miner' hidden>
-					<div class='pic'><i class="fa fa-university" aria-hidden="true"></i></div>
+					<div class='pic'><i class="fa fa-university" aria-hidden="true"></i>
+					</div>
 					<div class='name'>Two</div>
 					<div class='quantity' id='quantityTwo'>0</div>
 					<div class='cost' id='costTwo'>$100</div>
 				</div>
 				<div class='miner' hidden>
-					<div class='pic'><i class="fa fa-university" aria-hidden="true"></i></div>
+					<div class='pic'><i class="fa fa-university" aria-hidden="true"></i>
+					</div>
 					<div class='name'>Three</div>
 					<div class='quantity' id='quantityThree'>0</div>
 					<div class='cost' id='costThree'>$1100</div>
 				</div>
 				<div class='miner' hidden>
-					<div class='pic'><i class="fa fa-university" aria-hidden="true"></i></div>
+					<div class='pic'><i class="fa fa-university" aria-hidden="true"></i>
+					</div>
 					<div class='name'>Four</div>
 					<div class='quantity' id='quantityFour'>0</div>
 					<div class='cost' id='costFour'>$12000</div>
 				</div>
 				<div class='miner' hidden>
-					<div class='pic'><i class="fa fa-university" aria-hidden="true"></i></div>
+					<div class='pic'><i class="fa fa-university" aria-hidden="true"></i>
+					</div>
 					<div class='name'>Five</div>
 					<div class='quantity' id='quantityFive'>0</div>
 					<div class='cost' id='costFive'>$130000</div>
 				</div>
 				<div class='miner' hidden>
-					<div class='pic'><i class="fa fa-university" aria-hidden="true"></i></div>
+					<div class='pic'><i class="fa fa-university" aria-hidden="true"></i>
+					</div>
 					<div class='name'>Six</div>
 					<div class='quantity' id='quantitySix'>0</div>
 					<div class='cost' id='costSix'>$1400000</div>
@@ -91,7 +97,7 @@
 		</div>
 
 		<div class='footer'>
-			Clicker &copy; 2016, <a href='http://piotrfrancug.pl/'>Piotr Francug</a> - <a href='https://twitter.com/PiotrFrancug/'>twitter</a>
+			Clicker &copy; 2016 <a href='http://piotrfrancug.pl/'>Piotr Francug</a> - <a href='https://twitter.com/PiotrFrancug/'>twitter</a>
 		</div>
 	</div>
 	<script src='jquery-3.1.0.min.js'></script>
