--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"> 
 	<title>clicker</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Ubuntu'>
@@ -45,9 +46,9 @@
 			</div>
 		</div>
 		<div class='upgrades'>
-			<div class='upgrade' id='upOne'>100</div>
-			<div class='upgrade' id='upTwo'>500</div>
-			<div class='upgrade' id='upThree'>10000</div>
+			<div class='upgrade' id='upOne'>$100</div>
+			<div class='upgrade' id='upTwo'>$500</div>
+			<div class='upgrade' id='upThree'>$10000</div>
 		</div>
 		<div class='miners'>
 			<div class='hidemine'>
