--- a/index.html
+++ b/index.html
@@ -33,22 +33,17 @@
 				<div class='sec'>$0/s</div>
 			</div>
 			<div class='collect'>Click</div>
-			<div class='options'>Options</div>
+			<div class='options'>Tests</div>
 			<div class='optionspanel' hidden>
 				<div class='reset'>Reset</div>
-				<div class='load'>Load</div>
-				<div class='save'>Save</div>
-			</div>
-			<div class='admin'>Admin</div>
-			<div class='adminpanel' hidden>
-				<div class='buildings'>Miners</div>
-				<div class='hack'>10M</div>
+				<div class='buildings'>Show Miners</div>
+				<div class='hack'>+$10M</div>
 			</div>
 		</div>
 		<div class='upgrades'>
-			<div class='upgrade' id='upOne'>$100</div>
-			<div class='upgrade' id='upTwo'>$500</div>
-			<div class='upgrade' id='upThree'>$10000</div>
+			<div class='upgrade' id='upOne'>+$1/s for $100</div>
+			<div class='upgrade' id='upTwo'>+$2/s for $500</div>
+			<div class='upgrade' id='upThree'>+$4/s for $10000</div>
 		</div>
 		<div class='miners'>
 			<div class='hidemine'>
