--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<div class='upgrades'>
 			<div class='upgrade' id='upOne'>+$1/s for $100</div>
 			<div class='upgrade' id='upTwo'>+$2/s for $500</div>
-			<div class='upgrade' id='upThree'>+$4/s for $10000</div>
+			<div class='upgrade' id='upThree'>+$4/s for $10k</div>
 		</div>
 		<div class='miners'>
 			<div class='hidemine'>
@@ -73,21 +73,21 @@
 					</div>
 					<div class='name'>Four</div>
 					<div class='quantity' id='quantityFour'>0</div>
-					<div class='cost' id='costFour'>$12000</div>
+					<div class='cost' id='costFour'>$12k</div>
 				</div>
 				<div class='miner' hidden>
 					<div class='pic'><i class="fa fa-university" aria-hidden="true"></i>
 					</div>
 					<div class='name'>Five</div>
 					<div class='quantity' id='quantityFive'>0</div>
-					<div class='cost' id='costFive'>$130000</div>
+					<div class='cost' id='costFive'>$130k</div>
 				</div>
 				<div class='miner' hidden>
 					<div class='pic'><i class="fa fa-university" aria-hidden="true"></i>
 					</div>
 					<div class='name'>Six</div>
 					<div class='quantity' id='quantitySix'>0</div>
-					<div class='cost' id='costSix'>$1400000</div>
+					<div class='cost' id='costSix'>$1.4M</div>
 				</div>
 			</div>
 		</div>
